--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,23 @@
+
+* {
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-variation-settings: "wdth" 100;
+}
+
+
 body    {
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
-    flex-wrap: wrap;
+    
     flex-direction: column;
     margin: 0px;
     padding: 0px;   
 }
-/* 
+
 * {
-    outline: 3px    solid   lime;
-} */
+    /* outline: 3px    solid   lime; */
+}
 
 
 .header {
@@ -18,7 +26,7 @@ body    {
    
     padding: 0px 120px;
     background-color: #1f2937;
-    font: 18px, Roboto, 'Lucida sans', sans-serif;  
+    /* font: 18px, 'roboto', 'Lucida sans', sans-serif;   */
 }
 
 .logo   {
@@ -44,3 +52,67 @@ body    {
 
 /* header ends here */
 
+.section1 {
+    background-color: #1f2937;
+    padding: 100px  120px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 5px;
+}
+
+.left1  {
+    display: flex;
+    flex-direction: column;
+    
+    max-width: 30%;
+
+}
+
+.main-text  {
+    font-size: 48px;
+    color: #f9faf8;
+    font-weight: 900;
+}
+
+.subtext    {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.button1 {
+    box-sizing: border-box;
+    font-size: 18px;
+    color: #f9faf8;
+    font-weight: 700;
+    background-color: #3882f6;
+    border: 1px solid #3882f6;
+    border-radius: 5px;
+    padding: 7px 10px 12px 10px;
+    height: 40px;
+    width: 150px;
+
+    text-align: center;
+    margin: 5px 0px 0px 0px;
+}
+
+.section1 a:link {
+    text-decoration: none;
+}
+
+.img-container {
+    box-sizing: border-box;
+    display: flex;
+    margin-top: 10px;
+    /* padding: auto; */
+}
+
+.section1 img {
+    align-self: center;
+
+    max-width: 100%;
+    max-height: 300px;
+
+    padding: auto;
+}
