--- a/styles.css
+++ b/styles.css
@@ -126,12 +126,13 @@ body    {
     display: flex;
     flex-direction: column;
     padding: 0 120px;
+    margin: 60px 0px 160px 0px;
     align-items: center;
 }
 
 h1  {
     align-self: center;
-    margin: 60px 0px;
+    margin: 30px 0px 60px 0px;
     font-weight: 900;
     font-size: 36px;
     color: #1f2937;
@@ -171,3 +172,34 @@ h1  {
 }
 
 
+/* sectio 2 end */
+
+.section3 * {
+    outline: auto;
+}
+
+.section3   {
+    background-color: #e5e7eb;
+    padding: 0px 120px;
+    display: flex;
+    /* flex-direction: row; */
+
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+
+    /* padding: 0px 80px 0px 80px;   */
+}
+
+.section3 h1 {
+    margin: 200px 0px 0px 0px;
+    color: #1f2937;
+    font-weight: 300;
+}
+
+.section3 h2 {
+    margin: 20px 0px 0px 200px;
+    align-self: flex-end;
+}
