--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
 
 * {
-  font-family: "Roboto", sans-serif;
-  font-optical-sizing: auto;
-  font-variation-settings: "wdth" 100;
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-variation-settings: "wdth" 100;
 }
 
 
 body    {
-    /* height: 100vh; */
     display: flex;
     
     flex-direction: column;
@@ -15,18 +14,21 @@ body    {
     padding: 0px;   
 }
 
-* {
-    /* outline: 3px    solid   lime; */
+a:link {
+    text-decoration: none;
+    color: #e5e7eb;
+    text-decoration: none;   
 }
 
+a:visited {
+    color:  white;
+}
 
 .header {
     display: flex;
     justify-content: space-between;
-   
     padding: 0px 120px;
     background-color: #1f2937;
-    /* font: 18px, 'roboto', 'Lucida sans', sans-serif;   */
 }
 
 .logo   {
@@ -37,17 +39,7 @@ body    {
     display: flex;
     justify-content: space-evenly;
     align-self: center;
-    
     gap: 20px; 
-}
-
-.header-links a:link {
-    color: #e5e7eb;
-    text-decoration: none;   
-}
-
-.header-links a:visited {
-    color:  white;
 }
 
 /* header ends here */
@@ -65,7 +57,6 @@ body    {
 .left1  {
     display: flex;
     flex-direction: column;
-    
     max-width: 50%;
 }
 
@@ -73,7 +64,6 @@ body    {
     font-size: 48px;
     color: #f9faf8;
     font-weight: 900;
-
     margin-bottom: 10px;
 }
 
@@ -94,26 +84,19 @@ body    {
     padding: 7px 10px 12px 10px;
     height: 40px;
     width: 150px;
-
     text-align: center;
     margin: 5px 0px 0px 0px;
 }
 
-.section1 a:link {
-    text-decoration: none;
-}
 
 .img-container {
     box-sizing: border-box;
     display: flex;
-    margin-top: 10px;
-    
-    /* padding: auto; */
+    margin-top: 30px;
 }
 
 .section1 img {
     align-self: center;
-
     max-width: 100%;
     max-height: 300px;
     border-radius: 10px;
@@ -150,22 +133,18 @@ h1  {
 .s2-img-bundle  {
     display: flex;
     flex-direction: column;
-    max-width: ;
 }
 
 .s2-img-bundle div {
     max-width: 200px;
     text-align: center;
     color: #1f2937;
-
     margin-top: 10px;
 }
 
 .section2 img   {
-    /* box-sizing: border-box; */
     max-width: 200px;
     height: 200px;
-
     border-radius: 10px;
     border: solid #3882f6 5px;
     flex: 0 0 1;
@@ -174,23 +153,15 @@ h1  {
 
 /* sectio 2 end */
 
-.section3 * {
-    outline: auto;
-}
-
 .section3   {
     background-color: #e5e7eb;
     padding: 0px 120px;
     display: flex;
-    /* flex-direction: row; */
-
 }
 
 .quote {
     display: flex;
     flex-direction: column;
-
-    /* padding: 0px 80px 0px 80px;   */
 }
 
 .section3 h1 {
@@ -202,4 +173,63 @@ h1  {
 .section3 h2 {
     margin: 20px 0px 0px 200px;
     align-self: flex-end;
+    font-weight: 600;
+    margin-bottom: 200px;
 }
+
+/* section 3 end */
+
+.section4   {
+    padding: 80px   160px;
+}
+
+.section4container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 15px;
+    padding: 80px;
+    border-radius: 10px;
+    justify-content: space-between;
+    background-color: #3882f6;
+}
+
+.section4left   {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.boldtext   {
+    font-weight: 700;
+    font-size: 30px;
+    color: #f9faf8;
+}
+
+.light {
+    color: #f9faf8;
+}
+
+.section4button {
+    display: flex;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+    font-weight: 700;
+    width: 125px;
+    height: 30px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    background-color: #3882f6;
+    border: 3px solid #e5e7eb;
+    border-radius: 10px;
+}
+
+.footer {
+    background-color: #1f2937;
+    color: #e5e7eb;
+    margin-top: auto;
+    padding: 40px;
+    text-align: center;
+}
+
